# SoftwareTest2024

./: CMakeLists.txt  README.md
config/: config.json
include/: config_loader.hpp  hash.hpp  part1.hpp  part2.hpp  trades.hpp  word_utils.hpp
src/: hash.cpp  main.cpp  part1.cpp  part2.cpp  trades.cpp  word_utils.cpp
tests/: tests.cpp
